# entsoe-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  patch.diff  pyproject.toml  ruff.toml
.agents/artifacts/: 3a_arrange_act_assert.md  google_python_style_guide.md  logging_observability_guide.md  python_file_architecture_guide.md
.agents/artifacts/commits_giide/: before_writing_commit_apply_this.md  how_to_answer_example.md  how_to_write__a_production_grade_and_enterprise_standard_commit.md  how_to_write_a_git_commit_message.md
.agents/rules/: act-as-a-teacher.md  forse-feature-branch-workflow.md  include-adr-to-commits.md  logging-guide.md  no-need-to-write-a-licence-header-in-your-answer.md  paths.py-is-your-ssot.md  respect-architecture-rules.md  spark-configuration.md  you-have-no-permission-to-look-up-on-env.md
.agents/workflows/: design-python-scripts.md  writing-docstring-and-comments.md  writing-git-commit.md  writing-tests.md
.github/workflows/: security.yml
config_env_example/: bucket.yml  enviroment.yml  ports.yml  region.yml  volumes.yml
docker/: docker-compose.yml
docs/adr/: ADR-001-centralized-yaml-configuration.md
docs/adr/template/: ADR_TEMPLATE.md
docs/knowledge/: 001-architecting-portable-data-pipelines-via-yaml-configuration.md  002-pre-commit-tests-ci-cd-overview.md  003-use-defaultdict-instead-of-standard-dict.md
fms_metadata/: overview.yml
jobs/: ingest_fms_data.py
notebooks/: README.md
notebooks/.learning_scripts/: etl_iceberg_documentation.py  etl_seaweedfs_documentation.py  etl_spark_documentation.py
notebooks/.learning_scripts/artifacts/: iceberg_urls.txt  seaweed_fs.txt  spark_urls.txt
notebooks/duck_db/: explore_csv.py  explore_entsoe_file_library.py
notebooks/entsoe/: explore_csv.py  explore_entsoe_file_library.py  plan_fms_downloading.py
notebooks/getting_started/: quickstart_df.py
notebooks/getting_started/spark_notebooks/: quickstart_connect.ipynb  quickstart_df.ipynb  testing_pyspark.ipynb
notebooks/the_python_tutorial/: chapter_4_more_control_flow_tools.py  zen_of_python.py
src/entsoe_pipeline/: __init__.py
src/entsoe_pipeline/api/: __init__.py  client.py  ls_fms.py
src/entsoe_pipeline/config/: __init__.py  config_loader.py  paths.py  switch_env.py
src/entsoe_pipeline/fms_metadata/: __init__.py  overview_ingest.py
src/entsoe_pipeline/ingestion/: __init__.py  batch_fms_csv.py
src/entsoe_pipeline/logger/: __init__.py  exceptions.py  logger_config.py
src/entsoe_pipeline/spark/: spark_builder.py
src/entsoe_pipeline/vendor_patches/: __init__.py
src/entsoe_pipeline/vendor_patches/entsoe_py/: __init__.py  client.py
tests/: test_api_client.py  test_config_loader.py  test_config_metadata.py  test_config_mirror.py  test_ingest_job.py  test_logger.py  test_overview_ingest.py  test_paths.py  test_switch_env.py  test_vendor_patches.py
tests/pre_commit/: apply_license.py  check_dead_code.py  find_duplicate_tests.py  validate_adrs.py
the_python_tutorial/: zen_of_python.py
