[project]
name = "learning-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo==0.23.0",
    "narwhals>=2.21.0",
    "pyspark[connect,pipelines,sql]==4.1.1",
    "ty>=0.0.35",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.marimo.diagnostics]
enabled = true   
